initial seperation of fhir client logic